# creatureos

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  THIRD_PARTY_ASSETS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
creatureos/: cli.py  codex_cli.py  config.py  service.py  storage.py  web.py
creatureos/static/: console.css  creature_os.css  creature_os.js  shell.js  site.webmanifest
creatureos/templates/: index.html
creatureos/templates/layouts/: console_base.html
scripts/: browser_smoke.js  check_storage_sql.py  ensure_server.sh  preview_names.py  run_due.sh  serve.sh  storage_smoke.py
tests/: conftest.py  test_browser_smoke.py  test_cli.py  test_codex_cli.py  test_config.py  test_service.py  test_storage.py  test_web.py
