[project]
name = "creatureos"
version = "0.1.1"
description = "Local-first CreatureOS runtime for persistent Codex creatures"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["codex", "creatures", "fastapi", "local-first", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "fastapi",
  "jinja2",
  "python-multipart",
  "uvicorn",
]

[project.urls]
Homepage = "https://github.com/CreatureOS/creatureos"
Repository = "https://github.com/CreatureOS/creatureos"
Issues = "https://github.com/CreatureOS/creatureos/issues"

[project.optional-dependencies]
test = [
  "httpx",
  "pytest",
]

[project.scripts]
creatureos = "creatureos.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["creatureos"]
include-package-data = false

[tool.setuptools.package-data]
creatureos = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "browser: exercises a real browser against a temporary local server",
]
